# faces_generator

./: .pre-commit-config.yaml  README.md  download.py  pyproject.toml  requirements.txt
fake_faces_generator/: cli.py  download.py
src/fake_face_generator/: download.py
tests/: test_download.py  test_hash_bytes.py
