[tool.poetry]
name = "fake-faces-generator"
version = "0.1.0"
description = "A simple CLI for downloading unique images from thispersondoesnotexist.com"
authors = ["plachert <pmlachert@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/plachert/fake-faces-generator/"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
